[common] TODO: silence deprecated warning on Thread.getId -> Thread.threadId when Android gets up to speed